@@ -1,3 +1,6 @@
+Upcoming:
+- The ILostCities API is back
+
 1.16-4.0.5-alpha:
 - The 'assets' configuration works again so you can reconfigure how Lost Cities looks
 - All configuration files for Lost Cities are now in 'config/lostcities'. That makes it easier to find
